@@ -333,6 +333,7 @@ extern PyTypeObject TableRecTimeStreamType;
 extern PyTypeObject TableMorphType;
 extern PyTypeObject TrigTableRecType;
 extern PyTypeObject TrigTableRecTimeStreamType;
+extern PyTypeObject TablePutType;
 
 extern PyTypeObject NewMatrixType;
 extern PyTypeObject MatrixPointerType;
